<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_playe">Music Player</string>
    <string name="search_musi">Search music…</string>
    <string name="my_music">My Music</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="favourite">Favourite</string>
    <string name="image_here">Image Here</string>
    <string name="do_a_favor">Do a Favor</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_name_">Song Name..</string>
    <string name="artist_name">Artist Name..</string>
    <string name="end_song">05:00</string>
    <string name="start_song">01:00</string>
    <string name="artistblank">Artist</string>
    <string name="artistnameh">Artistnamehere…</string>
    <string name="songnameher">Songnamehere…</string>
    <string name="create_new_">Create New Playlist</string>
    <string name="empty_nothi">Empty! Nothing here</string>
    <string name="frag_artist_name">Artist Name</string>
    <string name="total_songs_artist">Total Songs(15)</string>
    <string name="add_to_favo">Add to Favorite</string>
    <string name="add_to_play">Add to Playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="music">music</string>
</resources>