<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardElevation="7dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:id="@+id/linear_play_recent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/music"
                android:scaleType="centerCrop"
                android:src="@drawable/playingnow" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_song_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/song_name_"
            android:textAppearance="@style/song_name_" />

        <TextView
            android:id="@+id/txt_artist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/artist_name"
            android:textAppearance="@style/artist_name" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

