<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="@dimen/_4sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_all_songs_list"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_song_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/music"
                android:scaleType="fitXY"
                android:src="@drawable/allsongsplaceholder" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_names"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintLeft_toRightOf="@+id/cv_all_songs_list"
            app:layout_constraintRight_toLeftOf="@+id/iv_fav"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/songnameher"
                android:textAppearance="@style/songnameher" />

            <TextView
                android:id="@+id/txt_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/artistnameh"
                android:textAppearance="@style/artistnameh" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:contentDescription="@string/music"
                android:src="@drawable/heart_empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/menu_two_dot"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>