<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.fragments.HomeFragment">

    <TextView
        android:id="@+id/txt_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/now_playing"
        android:textAppearance="@style/now_playing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_current_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_recent_songs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_now_playing">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/now_playing"
            android:scaleType="centerCrop"
            android:src="@drawable/playingnow" />

        <LinearLayout
            android:id="@+id/linear_home"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/fav_eclipse"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_now_playing">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_here"
                android:src="@drawable/heartfilled" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name_"
                android:textAppearance="@style/song_name_"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.74" />

            <TextView
                android:id="@+id/txt_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                android:textAppearance="@style/artist_name"
                app:layout_constraintBottom_toTopOf="@id/now_playing_progress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_song_name" />

            <ImageView
                android:id="@+id/now_playing_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:contentDescription="@string/now_playing"
                android:src="@drawable/nowplayingprogress"
                app:layout_constraintBottom_toTopOf="@id/linear_play_stop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_artist_name" />

            <TextView
                android:id="@+id/txtCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:text="@string/start_song"
                android:textAppearance="@style/start_song"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txtTotalTime"
                app:layout_constraintTop_toBottomOf="@id/now_playing_progress" />

            <TextView
                android:id="@+id/txtTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/end_song"
                android:textAppearance="@style/end_song"
                app:layout_constraintStart_toEndOf="@+id/txtCurrentTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_playing_progress" />

            <ImageView
                android:id="@+id/iv_playback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/now_playing"
                android:src="@drawable/playback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/linear_play_stop"
                app:layout_constraintTop_toBottomOf="@id/now_playing_progress" />

            <LinearLayout
                android:id="@+id/linear_play_stop"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/fav_eclipse"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_playback"
                app:layout_constraintRight_toLeftOf="@id/iv_play_forward"
                app:layout_constraintTop_toBottomOf="@+id/txt_artist_name">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_here"
                    android:src="@drawable/play" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_play_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/now_playing"
                android:src="@drawable/playforward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/linear_play_stop"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_playing_progress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_recent_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_current_playing"
        tools:listitem="@layout/recycler_view_recent_item"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>